--- a/reducer/package.json
+++ b/reducer/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export",
+    "produce": "npm run build --no-lint && npm run export"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -14,7 +16,6 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "shaderkit": "^0.2.0",
-    "tree-sitter": "^0.22.1",
     "web-tree-sitter": "^0.24.4"
   },
   "devDependencies": {
